force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CalculatePrice__c.field-meta.xml
<CustomField>
    <fullName>CalculatePrice__c</fullName>
    <formula>PMC_CPQ_ListPriceDiscountMarkup__c&lt;PMC_CPQ_PriceGuidanceFloor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CalculatePrice</label>
    <type>Checkbox</type>
</CustomField>