force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Get_Prices_Status_Extractor__c.field-meta.xml
<CustomField>
    <fullName>Get_Prices_Status_Extractor__c</fullName>
    <formula>TEXT(SBQQ__Quote__r.Get_Prices_Status__c)</formula>
    <label>Get Prices Status</label>
    <type>Text</type>
</CustomField>