force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CLM_ContractDocumentId__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_ContractDocumentId__c</fullName>
    <description>This field will be used to store the contract document id associated with a quote line</description>
    <label>Contract Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>