force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CLM_ContractDocumentName__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_ContractDocumentName__c</fullName>
    <description>This field will store the name of the Contract Document associated with the quote line</description>
    <label>Contract Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>