force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CLM_ContractTemplateType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_ContractTemplateType__c</fullName>
    <description>This will be a backend field used to evaluate the Contract template corresponding to a Quote Line based on the selection of Contract Type and MOT - populated by quote line flow this should be read-only or hidden on UI</description>
    <label>Contract Template Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>