force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CLM_EarliestCadenceDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_EarliestCadenceDate__c</fullName>
    <label>Earliest Cadence Date</label>
    <summarizedField>PMC_CPQ_Cadence__c.PMC_CPQ_ConfirmedDate__c</summarizedField>
    <summaryForeignKey>PMC_CPQ_Cadence__c.PMC_CPQ_QuoteLine__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>