force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CLM_HasPriceChanged__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_HasPriceChanged__c</fullName>
    <description>This field will indicate if Price has Changed in an Amendment or if a new line was adeed</description>
    <formula>IF(
AND(
TEXT(SBQQ__Quote__r.SBQQ__Type__c)=&apos;Amendment&apos;,
SBQQ__UpgradedSubscription__r.SBQQ__QuoteLine__r.PMC_CPQ_FinalPricePerTonne__c  &lt;&gt; PMC_CPQ_FinalPricePerTonne__c), 
true, 
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Price Changed</label>
    <type>Checkbox</type>
</CustomField>