force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CLM_QuoteLineNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_QuoteLineNumber__c</fullName>
    <formula>IF	(
	TEXT(SBQQ__Quote__r.SBQQ__Type__c) &lt;&gt; &apos;Amendment&apos;,
		SBQQ__Quote__r.PMC_CLM_DocumentNumber__c &amp; &quot;-&quot; &amp; SUBSTITUTE(Name,&quot;QL-&quot;,&quot;&quot;),
		IF	(
				ISNULL(SBQQ__UpgradedSubscription__c) ||  ISBLANK(SBQQ__UpgradedSubscription__c),
				SBQQ__Quote__r.SBQQ__Opportunity2__r.SBQQ__AmendedContract__r.SBQQ__Quote__r.PMC_CLM_DocumentNumber__c &amp; &quot;-&quot; &amp; SUBSTITUTE(Name,&quot;QL-&quot;,&quot;&quot;),
				SBQQ__UpgradedSubscription__r.SBQQ__QuoteLine__r.SBQQ__Quote__r.PMC_CLM_DocumentNumber__c &amp; &quot;-&quot; &amp; SUBSTITUTE(SBQQ__UpgradedSubscription__r.SBQQ__QuoteLine__r.Name ,&quot;QL-&quot;,&quot;&quot;) 	
			)
	)</formula>
    <label>Quote Line Number</label>
    <type>Text</type>
</CustomField>