force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CLM_ShipToInformation__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_ShipToInformation__c</fullName>
    <description>This field is created to get the Ship To address information on the Line level - so that it can be shown in the amendment template</description>
    <formula>PMC_CPQ_ShipTo__r.ShippingStreet + &apos;, &apos; + PMC_CPQ_ShipTo__r.ShippingCity + &apos;, &apos; +  PMC_CPQ_ShipTo__r.ShippingPostalCode + &apos;, &apos; + PMC_CPQ_ShipTo__r.ShippingState + &apos;, &apos; + PMC_CPQ_ShipTo__r.ShippingCountry</formula>
    <label>Ship To Information</label>
    <type>Text</type>
</CustomField>