force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_Account__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created  to check the associated Account of a SBQQ quote line item record.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>