force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_AccountBackend__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AccountBackend__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__Account__c</formula>
    <label>Account (Backend)</label>
    <type>Text</type>
</CustomField>