force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_AdjustedListPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AdjustedListPrice__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is created  to check the list price adjustment</description>
    <label>Adjusted List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>