force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_AdvanceBilling__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AdvanceBilling__c</fullName>
    <formula>SBQQ__Quote__r.PMC_CPQ_AdvanceBilling__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Billing</label>
    <type>Checkbox</type>
</CustomField>