force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_Allocation__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Allocation__c</fullName>
    <description>This field is created  to check the allocation data of quote lines</description>
    <label>Allocation (MTN)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>