force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_Approval__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created as a part of Approval setup</description>
    <label>Approval</label>
    <referenceTo>sbaa__Approval__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>