force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_ApprovalRule__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ApprovalRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created as the part of Approval setup.</description>
    <label>Approval Rule</label>
    <referenceTo>sbaa__ApprovalRule__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>