force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_AvailabilityIndicator__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AvailabilityIndicator__c</fullName>
    <description>This field is created  to check product availability.</description>
    <formula>&quot; &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Availability Indicator</label>
    <type>Text</type>
</CustomField>