force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_BRLineTotalPriceFormula__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_BRLineTotalPriceFormula__c</fullName>
    <formula>PMC_CPQ_FinalPricePerTonne__c * SBQQ__Quantity__c</formula>
    <label>BR Line Total Price Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>