force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_Cancellation_sent_to_SAP__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Cancellation_sent_to_SAP__c</fullName>
    <formula>OR(
   AND(
    ISPICKVAL(SBQQ__Quote__r.SBQQ__Status__c, &apos;Accepted&apos;),
    NOT(ISBLANK(SBQQ__Quote__r.PMC_CPQ_SAPContractReference__c)),
    OR(SBQQ__Quantity__c = 0.01, SBQQ__Quantity__c = 0.1)
   ), 
   AND(
    OR(
      ISPICKVAL(SBQQ__Quote__r.SBQQ__Type__c, &apos;Amendment&apos;),
      ISPICKVAL(SBQQ__Quote__r.SBQQ__Type__c, &apos;Renewal&apos;)
    ),
    PMC_CPQ_Is_Initial_Quantity_Satisfied__c,
    OR(SBQQ__Quantity__c = 0.01, SBQQ__Quantity__c = 0.1)
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>z`z`</label>
    <type>Checkbox</type>
</CustomField>