force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_Commission__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Commission__c</fullName>
    <description>This field is created  to check commission&apos;s value</description>
    <label>Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>