force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_ContractType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ContractType__c</fullName>
    <description>This field is created  to check the contract type associated to the SBQQ Quote line item.</description>
    <inlineHelpText>This field captures the Contract Type</inlineHelpText>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PMC_CPQ_QuoteRecordType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>FPD</fullName>
            </value>
            <value>
                <fullName>Priced</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
                <isActive>false</isActive>
                <label>Annual</label>
            </value>
            <value>
                <fullName>FPD Ex-Space</fullName>
                <isActive>false</isActive>
                <label>FPD Ex-Space</label>
            </value>
            <value>
                <fullName>Priced Ex-Space</fullName>
                <isActive>false</isActive>
                <label>Priced Ex-Space</label>
            </value>
            <value>
                <fullName>Provisional Pricing</fullName>
                <isActive>false</isActive>
                <label>Provisional Pricing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>