force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_CropType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CropType__c</fullName>
    <label>Crop Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alfalfa</fullName>
            </value>
            <value>
                <fullName>Artichoke</fullName>
            </value>
            <value>
                <fullName>Banana</fullName>
            </value>
            <value>
                <fullName>Barley</fullName>
            </value>
            <value>
                <fullName>Bean</fullName>
            </value>
            <value>
                <fullName>Beans Safrinha</fullName>
            </value>
            <value>
                <fullName>Cane</fullName>
            </value>
            <value>
                <fullName>Carrot</fullName>
            </value>
            <value>
                <fullName>Cassava</fullName>
            </value>
            <value>
                <fullName>Cassava Watermelon</fullName>
                <isActive>false</isActive>
                <label>Cassava Watermelon</label>
            </value>
            <value>
                <fullName>Castor bean</fullName>
            </value>
            <value>
                <fullName>Citrus</fullName>
            </value>
            <value>
                <fullName>Cocoa</fullName>
            </value>
            <value>
                <fullName>Coconut</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Coffee-Irrigant</fullName>
            </value>
            <value>
                <fullName>Corn</fullName>
            </value>
            <value>
                <fullName>Corn-Irrigant</fullName>
            </value>
            <value>
                <fullName>Corn Safrinha</fullName>
            </value>
            <value>
                <fullName>Corn silage</fullName>
            </value>
            <value>
                <fullName>Corn silage Strawberry</fullName>
                <isActive>false</isActive>
                <label>Corn silage Strawberry</label>
            </value>
            <value>
                <fullName>Cotton</fullName>
            </value>
            <value>
                <fullName>Cotton-Irrigant</fullName>
            </value>
            <value>
                <fullName>Cucumber</fullName>
            </value>
            <value>
                <fullName>Eucalyptus</fullName>
            </value>
            <value>
                <fullName>Frijoles-Riego</fullName>
            </value>
            <value>
                <fullName>Fruits</fullName>
            </value>
            <value>
                <fullName>Garlic</fullName>
            </value>
            <value>
                <fullName>Grape</fullName>
            </value>
            <value>
                <fullName>Millet silage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>