force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_CustomerOfferedPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CustomerOfferedPrice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Offered Price</label>
    <type>Checkbox</type>
</CustomField>