force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_DeliveryEndDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeliveryEndDate__c</fullName>
    <label>Delivery End Date</label>
    <type>Date</type>
</CustomField>