force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_DeliveryRegion__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeliveryRegion__c</fullName>
    <formula>TEXT( SBQQ__Quote__r.PMC_CPQ_DeliveryRegion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Region</label>
    <type>Text</type>
</CustomField>