force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_DeliveryStartDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeliveryStartDate__c</fullName>
    <label>Delivery Start Date</label>
    <type>Date</type>
</CustomField>