force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_DirtyDistance__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DirtyDistance__c</fullName>
    <label>Dirty Distance</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>