force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_Discount__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is created  to check the discount of any quote line record.</description>
    <inlineHelpText>Discount on the product from final price per tonne</inlineHelpText>
    <label>Price Adjustment</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>