force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_EstTax__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_EstTax__c</fullName>
    <description>This field is created  to check the estimated tax.</description>
    <label>Est. Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>