force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_ExistingInventory__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ExistingInventory__c</fullName>
    <description>This field is created  to check Inventory database mapping based on Product &amp; Origin</description>
    <label>Existing Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>