force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_ExpeditionPoint__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ExpeditionPoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Point</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>$Source.PMC_CPQ_ProductLocationLocationBackend__c</field>
            <operation>equals</operation>
            <valueField>Location.PMC_CPQ_ExpeditionPoint__c</valueField>
        </filterItems>
        <filterItems>
            <field>Location.RecordTypeId</field>
            <operation>equals</operation>
            <value>Expedition Point</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>CPQ Quote Lines (Expedition Point)</relationshipLabel>
    <relationshipName>CPQ_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>