force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_ExspaceIndicator__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ExspaceIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created  to check Ex-Space indicator value.</description>
    <label>Exclusive Space</label>
    <type>Checkbox</type>
</CustomField>