force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_FinalPricePerTon__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_FinalPricePerTon__c</fullName>
    <label>Final Price Per Ton (Original)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>