force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_FinalPricePerTonne__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_FinalPricePerTonne__c</fullName>
    <description>The Overall Final Price Per Tonne</description>
    <label>Final Price Per Tonne</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>