force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_FlowVRBypassToggle__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_FlowVRBypassToggle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field to bypass validation rules triggered via flow</description>
    <label>Flow VR Bypass Toggle</label>
    <type>Checkbox</type>
</CustomField>