force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_FreightMonth__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_FreightMonth__c</fullName>
    <label>Freight Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Freight</fullName>
                <default>true</default>
                <label>Actual</label>
            </value>
            <value>
                <fullName>Freight +1</fullName>
                <label>Actual +1</label>
            </value>
            <value>
                <fullName>Freight +2</fullName>
                <label>Actual +2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>