force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_GeneralComments__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_GeneralComments__c</fullName>
    <description>This field is created  to Provide comments on any line item data.</description>
    <label>General Comments</label>
    <type>TextArea</type>
</CustomField>