force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_HarvestPeriod__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_HarvestPeriod__c</fullName>
    <description>This field is created  to check Harvest period.</description>
    <label>Harvest Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Future</fullName>
            </value>
            <value>
                <fullName>Present</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>