force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_Incoterm2__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Incoterm2__c</fullName>
    <description>This field is to check destination of the incoterm which is dependent on Incoterm1 and Region</description>
    <formula>IF( PMC_CPQ_QuoteRegionExtractor__c  = &apos;North America&apos;,
IF(OR( ISPICKVAL( PMC_CPQ_Incoterms1__c , &apos;FOB&apos;), ISPICKVAL( PMC_CPQ_Incoterms1__c , &apos;FCA&apos;)),&apos;Origin&apos;,&apos;Destination&apos;),
IF(PMC_CPQ_QuoteRegionExtractor__c  = &apos;Brazil&apos;,&apos;Origin&apos;,&apos;Destination&apos;))</formula>
    <label>Back End Incoterms2</label>
    <type>Text</type>
</CustomField>