force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_Incoterms2__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Incoterms2__c</fullName>
    <description>This field is created  to check destination of the incoterm</description>
    <label>Incoterms2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAP/Supply chain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>