force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_Interest__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Interest__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>This field is created  to check the interest for a quote line item record.</description>
    <label>Interest Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>