force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_Is_Initial_Quantity_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Is_Initial_Quantity_Satisfied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Initial Quantity Satisfied</label>
    <type>Checkbox</type>
</CustomField>