force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created  to check if the field is considered for Deletion.</description>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>