force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_IsQuantityUpdated__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_IsQuantityUpdated__c</fullName>
    <formula>SBQQ__Quantity__c  &lt;&gt;   PMC_CPQ_Last_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Quantity Updated</label>
    <type>Checkbox</type>
</CustomField>