force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_Last_Quantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Last_Quantity__c</fullName>
    <description>This field will store the last quantity sent to SAP for cadence.</description>
    <label>Last Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>