force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_LastPricedDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LastPricedDate__c</fullName>
    <label>Last Priced Date</label>
    <type>DateTime</type>
</CustomField>