force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_LegacyQuoteLineID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LegacyQuoteLineID__c</fullName>
    <label>Legacy Quote Line ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>