force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_LinePONumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LinePONumber__c</fullName>
    <description>This field will be used to capture the PO Number at a line level - leveraged in the Contract Document forms for North America</description>
    <label>Customer PO #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>