force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_ListPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ListPrice__c</fullName>
    <label>List Price (Original)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>