force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_ListPriceDiscountMarkup__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ListPriceDiscountMarkup__c</fullName>
    <formula>IF( ISPICKVAL( CurrencyIsoCode ,&apos;USD&apos;), SBQQ__ListPrice__c  +  PMC_CPQ_Discount__c , SBQQ__ListPrice__c  +  (PMC_CPQ_Discount__c *  PMC_CPQ_ExchangeRate__c ))</formula>
    <label>List Price+Discount/Markup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>